k8s/httproutes/payment_httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: payments-httproute
  namespace: opslora-test-ns
  labels:
    app: payments
spce:
  parentRef:
  - name: opslora-gateway
    namespace: opslora-gateway-ns
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /api/v1/payments
    backendRefs:
    - name: payments-service
      port: 3000
